Fixed some dark mode sections

--- a/style.css
+++ b/style.css
@@ -146,6 +146,9 @@ from, to { border-color: transparent }
   height: 430px;
   border-radius: 50%;
   border: solid 1px black;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
 }
 
 
@@ -178,6 +181,10 @@ from, to { border-color: transparent }
   height: 430px;
   border-radius: 50%;
   border: solid 1px black;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
+
 }
 
 
@@ -200,6 +207,47 @@ from, to { border-color: transparent }
 
 
 .main-about2 p {
+  padding-right: 30px;
+}
+
+.about3 {
+  width: 100%;
+  padding: 100px 0px;
+  background-color: white;
+}
+
+.about-img3 img {
+  height:auto;
+  width: 430px;
+  height: 430px;
+  border-radius: 50%;
+  border: solid 1px black;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
+
+}
+
+
+.main-about3{
+  width: 1130px;
+  max-width: 95%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.main-about3 h2 {
+  padding-bottom: 10px;
+}
+
+.main-about3 h3 {
+  padding-bottom: 10px;
+}
+
+
+.main-about3 p {
   padding-right: 30px;
 }
 
@@ -374,6 +422,18 @@ border-radius: 50%;
 }
 
 .about-dark-mode {
+  width: 100%;
+  padding: 100px 0px;
+  background-color:#111111;
+}
+
+.about2-dark-mode {
+  width: 100%;
+  padding: 100px 0px;
+  background-color:#333333;
+}
+
+.about3-dark-mode {
   width: 100%;
   padding: 100px 0px;
   background-color:#111111;
